<resources>
    <string name="app_name">Calendar-To-do</string>
    <!--home-->
    <string name="calendar">Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="todo">To-do</string>
    <string name="done">Done</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="check_list">Check List</string>
    <string name="tool_box">Toolbox</string>
    <!--edit-->
    <string name="todo_list_mode">To-do-List Mode</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="set">Set</string>
    <string name="clear">Clear</string>
    <!--menu-->
    <string name="sort">Calendar by Category</string>
    <string name="search">GoogleMap Search</string>
    <string name="result">Todo-Task Result</string>
    <!--invitation-->
    <string name="invitation">Invitation</string>
    <string name="invite_title">LET\'S EDIT TOGETHER</string>
    <string name="send">Send</string>
    <string name="invite_hint">Enter the E-mail</string>
    <string name="plan">Plan</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_invitation">No Invitation Yet</string>
    <string name="invite">Invite</string>
    <!--add category-->
    <string name="category_title">ADD CATEGORY</string>
    <string name="category_hint">Enter the Category</string>
    <string name="submit">Submit</string>
    <!--login-->
    <string name="login_title">Calendar-To-do</string>
    <string name="Error">Error</string>
    <!--result-->
    <string name="to_do_task">To-do Task</string>
    <string name="done_task">Done Task</string>
    <string name="done_task_category">Done Task Category</string>
    <string name="error">Error</string>
    <!--broadcast-->
    <string name="channel_name">notify</string>
    <string name="channel_description">notify</string>
    <!--broadcast-->
    <string name="alarm_title">Alarm Clock Setup</string>
</resources>