<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/homeSortFragment"
            android:icon="@drawable/calendar2"
            android:title="@string/sort" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/search3"
            android:title="@string/search" />
        <item
            android:id="@+id/resultFragment"
            android:icon="@drawable/result2"
            android:title="@string/result" />
        <item
            android:id="@+id/invitationFragment"
            android:icon="@drawable/invitation2"
            android:title="@string/invitation" />
</menu>