<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.rita.calendarprooo.edit.EditViewModel" />
        <variable
            name="check"
            type="com.rita.calendarprooo.data.Check" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image_todolist_mode"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/check" />


                <TextView
                    android:id="@+id/text_todolist_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="29dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/todo_list_mode"
                    android:textColor="@color/black_3f3a3a"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/image_todolist_mode"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/text_title"
                    style="@style/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_todolist_mode" />

                <EditText
                    android:id="@+id/editText_title"
                    style="@style/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_title" />

                <TextView
                    android:id="@+id/text_description"
                    style="@style/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_title" />

                <EditText
                    android:id="@+id/editText_description"
                    style="@style/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_description" />

                <TextView
                    android:id="@+id/text_category"
                    style="@style/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/btn_category_plus"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_category"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_category"/>

                <ImageView
                    android:id="@+id/btn_category_plus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/category_list"
                    app:layout_constraintTop_toBottomOf="@id/text_category"
                    app:srcCompat="@drawable/plus3" />


                <TextView
                    android:id="@+id/text_checklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/check_list"
                    android:textColor="@color/black_3f3a3a"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_list" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/check_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_checklist"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_check"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/check_list_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/check_list">

                    <ImageView
                        android:id="@+id/checklist_image"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginStart="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/uncheck" />

                    <EditText
                        android:id="@+id/checklist_text"
                        style="@style/check_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="30dp"
                        android:hint="Add your task"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.checkText}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/checklist_image"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/checklist_image_created"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:onClick="@{()->viewModel.checkListTextCreated()}"
                        android:src="@drawable/check_list" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/check_list_add"
                    style="@style/edit" />

                <EditText
                    android:id="@+id/editText_location"
                    style="@style/edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_location" />


                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/cancel"
                    app:layout_constraintTop_toBottomOf="@id/editText_location"
                    app:layout_constraintEnd_toStartOf="@+id/button_save"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_location"
                    app:layout_constraintStart_toEndOf="@+id/button_cancel" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>