<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.rita.calendarprooo.invite.InviteCategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/invite_btn_cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete" />

        <TextView
            android:id="@+id/invite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/invite_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separation_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="#CCCCCC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invite_title" />

        <ImageView
            android:id="@+id/invite_image_title"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separation_line"
            app:srcCompat="@drawable/invitation" />

        <TextView
            android:id="@+id/invite_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="150dp"
            android:text="@{viewModel.category}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/invite_image_title"
            app:layout_constraintTop_toBottomOf="@id/separation_line"
            tools:text="Travel" />




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="55dp"
            android:background="@drawable/border_corner_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invite_text_title">

            <EditText
                android:id="@+id/invite_edit_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/invite_hint"
                android:text="@={viewModel.email}"
                android:textAlignment="center"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></EditText>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_green_background"
            android:fontFamily="@font/noto_sans"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/invite"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:onClick="@{()->viewModel.createInvitation()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>